# minesweeper_solver

./: .gitignore  CMakeLists.txt  README.md  controller.cpp
include/: ann.hpp  controller.hpp
include/util/: image.hpp
src/: ann.cpp  ann.hpp  controller.cpp  controller.hpp  helloworld.cpp  main.cpp
src/util/: image.hpp  util.hpp
